--- a/rdoc/lib/vclog/vcs/git_rb.html
+++ b/rdoc/lib/vclog/vcs/git_rb.html
@@ -8,12 +8,12 @@
 
   <title>File: git.rb [VCLog]</title>
 
-  <link rel="SHORTCUT ICON" href="../../../images/ruby.png">
+  <link rel="SHORTCUT ICON" href="../../../images/file.png">
 
   <link type="text/css" media="screen" rel="stylesheet" href="../../../rdoc.css" />
 
   <script src="../../../js/jquery.js" type="text/javascript" charset="utf-8"></script>
-  <script src="../../../js/thickbox-compressed.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../../../js/thickbox.js" type="text/javascript" charset="utf-8"></script>
   <script src="../../../js/quicksearch.js" type="text/javascript" charset="utf-8"></script>
   <script src="../../../js/darkfish.js" type="text/javascript" charset="utf-8"></script>
 </head>
