--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   <h1>VCLog</h1>
 
   <a href="rdoc/index.html">RDocs</a> &nbsp;
-  <a href="respect/index.html">Respects</a> &nbsp;
-  <a href="http://rubyforge.org/projects/proutils">Rubyforge</a> &nbsp;
-  <a href="http://github.com/transfire/proutils">GitHub</a>
+  <!-- <a href="qedoc/index.html">QEDocs</a> &nbsp; -->
+  <a href="http://googlegroups.com/group/proutils">GoogleGroup</a> &nbsp;
+  <a href="http://github.com/proutils/vclog">GitHub</a>
 
 </div>
 </BODY>
