--- a/rdoc/TODO.html
+++ b/rdoc/TODO.html
@@ -99,6 +99,10 @@
 
   <div id="documentation">
     <h1><a href="TODO.html">TODO</a></h1>
+<h2>Typed option needs work</h2>
+<p>
+It produced no results sometimes. Fix or deprecate.
+</p>
 <h2>Automagical Version</h2>
 <p>
 Would be cool if it could also generate an automagical version number.
