--- a/rdoc/TODO.html
+++ b/rdoc/TODO.html
@@ -99,6 +99,22 @@
 
   <div id="documentation">
     <h1><a href="TODO.html">TODO</a></h1>
+<h2>Support Markdown and RDoc release output styles</h2>
+<p>
+Right now its all RDoc.
+</p>
+<h2>Imporved parsing flexability</h2>
+<p>
+In general parsing hueristics need to be imporved. Some specifics:
+</p>
+<ul>
+<li>Need to support relase comments.
+
+</li>
+<li>Need to recognize &#8220;Changes:&#8221; marker
+
+</li>
+</ul>
 <h2>Typed option needs work</h2>
 <p>
 It produced no results sometimes. Fix or deprecate.
