--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     .menu { padding: 20px; text-align: center; background: #552200; }
     .head { height: 250px; text-align: center; border-top: 2px solid tan; border-bottom: 2px solid tan; }
     .title { text-align: left; margin: 0 auto; width: 800px; }
-    .body { background: #552200; color: white; }
+    .body { background: #552200; color: white; border-bottom: 2px solid tan; }
     .doc { padding: 20px; text-align: justify; margin: 0 auto; width: 800px; }
     .doc a { color: fee; }
-    .foot { padding: 20px; text-align: center; margin: 0 auto; width: 800px; border-top: 2px solid tan; }
+    .foot { padding: 20px; text-align: center; margin: 0 auto; width: 800px; }
     .foot p { color: #552200; text-align: center; }
   </style>
 </HEAD>
@@ -158,6 +158,20 @@ our output options limited. That's were vcLog comes in.</p>
 </div>
 
 <div class="foot">
+  <script type="text/javascript"><!--
+  google_ad_client = "pub-1126154564663472";
+  /* PROUTILS 09-10-14 728x90 */
+  google_ad_slot = "0711173189";
+  google_ad_width = 728;
+  google_ad_height = 90;
+  //-->
+  </script>
+  <script type="text/javascript"
+  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+  </script>
+
+  <br/><br/>
+
   <p>Copyright (c) 2009 Thomas Sawyer</p>
 </div>
 
