--- a/index.html
+++ b/index.html
@@ -35,17 +35,19 @@
 
 <div class="nav">
   <div class="menu">
-    <a href="rdoc/index.html">API Documents</a> &nbsp;&nbsp;
+    <a href="http://rubygems.org/gems/vclog">Gem</a> &nbsp;&nbsp;
+    <a href="rdoc/index.html">API</a> &nbsp;&nbsp;
     <!-- <a href="qedoc/index.html">QEDocs</a> &nbsp;&nbsp; -->
-    <a href="http://googlegroups.com/group/proutils">Mailing List</a> &nbsp;&nbsp;
-    <a href="http://github.com/proutils/vclog">Source Code</a> &nbsp;&nbsp;
+    <a href="http://googlegroups.com/group/proutils">Forum</a> &nbsp;&nbsp;
+    <a href="http://github.com/proutils/vclog/issues">Issue</a> &nbsp;&nbsp;
+    <a href="http://github.com/proutils/vclog">Code</a> &nbsp;&nbsp;
   </div>
 </div>
 
 <div class="head">
   <div class="title">
     <img src="assets/images/logo.jpg" style="height: 250px;" align="right"/><br/>
-    <h1>vcLog</h1>
+    <h1>VCLog</h1>
   </div>
 </div>
 
@@ -56,7 +58,7 @@
   Thankfully we have version control systems to make the chore a bit easier. But review these changes and we find
   our output options limited. That's were vcLog comes in.</p>
 
-  <p>vcLog can provide a changelogs in a variety of uniform formats for different SCMs. If we ask vcLog for help
+  <p>VCLog can provide a changelogs in a variety of uniform formats for different SCMs. If we ask vcLog for help
   will see it's commandline interface is fairly self-explanitory.</p>
 
   <pre>
@@ -154,15 +156,9 @@
       * first commit
   </pre>
 
-  <p>Finally, vcLog recognizes commit types. There are single-word markers at the end of a commit messages wrapped in square brackets.
-  It you utilize these, eg. <code>git commit -m "fixed foo issue [bug]"</code>, then you can sort the changelog output by type.
-  You can actually see this already in the previous example. No types were used so it labled all the commits as "General Enhancements".
-  If say a <code>[bug]</code> type were used it would have separated that commit out under <code>1 Bug Fixes</code>. vcLog recorgnizes
-  <code>[maj]</code> or <code>[major]</code>, <code>[min]</code> or <code>[minor]</code>, <code>[bug]</code> and <code>[admin]</code> or <code>[-]</code>.
-  Any other label is treated verbatim, ie. <code>[doozy]</code> would show up as "<code>1 Doozy Enhancement</code>".</p>
+  <p>Finally, VCLog recognizes commit types. There are single-word markers eitther placed at the beginning of the commit message separated by a colon, or placed at the at the end of a commit messages wrapped in square brackets. It you utilize these, e.g. <code>git commit -m "bug: fixed foo issue"</code> or <code>git commit -m "fixed foo issue [bug]"</code>, then you can sort the changelog output by type.  You can actually see this already in the previous example. No types were used so it labled all the commits as "General Enhancements". If say a <code>[bug]</code> type were used it would have separated that commit out under <code>1 Bug Fixes</code>. vcLog recorgnizes <code>[maj]</code> or <code>[major]</code>, <code>[min]</code> or <code>[minor]</code>, <code>[bug]</code> and <code>[admin]</code> or <code>[-]</code>. Any other label is treated verbatim, e.g. <code>[doozy]</code> would show up as "<code>1 Doozy Enhancement</code>".</p>
 
-  <p>Commit types can be very useful to way to categorize your commits and thus present more readable changelogs --though it would be even nicer
-  if SCMs supported them directly, e.g. with a <code>--type</code> option.</p>
+  <p>Commit types can be very useful to way to categorize your commits and thus present more readable changelogs --though it would be even nicer if SCMs supported them directly, e.g. with a <code>--label</code> option.</p>
 
   </div>
 </div>
