admin: add wiki to website menu

--- a/site/index.html
+++ b/site/index.html
@@ -39,6 +39,7 @@
     <a href="rdoc/index.html">API</a> &nbsp;&nbsp;
     <!-- <a href="qedoc/index.html">QEDocs</a> &nbsp;&nbsp; -->
     <a href="http://googlegroups.com/group/proutils">Forum</a> &nbsp;&nbsp;
+    <a href="http://wiki.github.com/proutils/vclog">Wiki</a> &nbsp;&nbsp;
     <a href="http://github.com/proutils/vclog/issues">Issue</a> &nbsp;&nbsp;
     <a href="http://github.com/proutils/vclog">Code</a> &nbsp;&nbsp;
   </div>
