--- a/rdoc/REQUIRE.html
+++ b/rdoc/REQUIRE.html
@@ -46,7 +46,7 @@
       <h3 class="section-header">File Stats</h3>
       <dl>
         <dt class="modified-date">Last Modified</dt>
-        <dd class="modified-date">Wed May 26 09:33:18 -0400 2010</dd>
+        <dd class="modified-date">Wed May 26 20:52:12 -0400 2010</dd>
 
         
 
@@ -727,6 +727,24 @@ runtime:
 <ul>
 <li><p>
 facets >2.4
+</p>
+</li>
+</ul>
+<p>
+development:
+</p>
+<ul>
+<li><p>
+syckle
+</p>
+</li>
+</ul>
+<p>
+development/test:
+</p>
+<ul>
+<li><p>
+cucumber
 </p>
 </li>
 </ul>
