--- a/rdoc/PROFILE.html
+++ b/rdoc/PROFILE.html
@@ -46,7 +46,7 @@
       <h3 class="section-header">File Stats</h3>
       <dl>
         <dt class="modified-date">Last Modified</dt>
-        <dd class="modified-date">Fri May 14 17:21:44 -0400 2010</dd>
+        <dd class="modified-date">Wed May 26 21:01:12 -0400 2010</dd>
 
         
 
@@ -722,11 +722,10 @@
 
   <div id="documentation">
     <hr style="height: 1px"></hr><p>
-title    : <a href="VCLog.html">VCLog</a> summary  : Cross-VCS/SCM
-ChangeLog Generator copyright: Copyright &#169; 2009 Thomas Sawyer license 
-: GPL3 suite    : proutils authors  : Thomas Sawyer created  : 2006-05-09
-contact  : <a
-href="http://googlegroups.com/group/proutils">googlegroups.com/group/proutils</a>
+title    : <a href="VCLog.html">VCLog</a> suite    : proutils summary  :
+Cross-VCS/SCM ChangeLog Generator copyright: Copyright &#169; 2009 Thomas
+Sawyer license  : MIT contact  : trans <transfire@gmail.com> created  :
+2006-05-09 authors  : Thomas Sawyer
 </p>
 <p>
 description:
@@ -738,7 +737,7 @@ description:
 resources:
 </p>
 <pre>
-  homepage: http://proutils.rubyforge.org/vclog
+  homepage: http://proutils.github.com/vclog
   repository: git://github.com/proutils/vclog.git</pre>
 
   </div>
