admin: fix type on website

--- a/site/index.html
+++ b/site/index.html
@@ -73,15 +73,15 @@
       -F, --formats                    list supported formats
    
   FORMAT OPTION:
-      -f, --format <FORMAT>            Output format
+      -f, --format FORMAT              output format
    
   OTHER OPTIONS:
-          --title <TITLE>              document title, used by some formats
+          --title TITLE                document title, used by some formats
       -e, --extra                      provide extra output (used by some formats)
-      -v, --version <NUM>              current version to use for release history
-          --style <URI>                provide a stylesheet URI (css or xsl) for HTML or XML format
+      -v, --version NUM                current version to use for release history
+          --style URI                  provide a stylesheet URI (css or xsl) for HTML or XML format
           --id                         include revision ids (in formats that normally do not)
-      -o, --output <FILE>              send output to a file instead of stdout
+      -o, --output FILE                send output to a file instead of stdout
    
   STANDARD OPTIONS:
           --debug                      show debugging infromation
