--- a/site/index.html
+++ b/site/index.html
@@ -151,7 +151,7 @@
 
   <p>A variety of formats are available for Changelogs and Release Histories,
   here are examples of VCLog's own Release History in the <a href="log/vclog/history.html">HTML</a>,
-  <a href="lob/vclog/history.atom">Atom</a>, and <a href="log/vclog/history.json">JSON</a>
+  <a href="log/vclog/history.atom">Atom</a>, and <a href="log/vclog/history.json">JSON</a>
   formats.</p>
 
   <p>Finally, VCLog recognizes commit types. There are single-word markers either placed at the beginning of the commit message separated by a colon, or placed at the at the end of a commit messages wrapped in square brackets. It you utilize these, e.g. <code>git commit -m "bug: fixed foo issue"</code> or <code>git commit -m "fixed foo issue [bug]"</code>, then you can sort the changelog output by type.  You can actually see this already in the previous example. No types were used so it labeled all the commits as "General Enhancements". If say a <code>[bug]</code> type were used it would have separated that commit out under <code>1 Bug Fixes</code>. VCLog recognizes <code>[maj]</code> or <code>[major]</code>, <code>[min]</code> or <code>[minor]</code>, <code>[bug]</code> and <code>[admin]</code> or <code>[-]</code>. Any other label is treated verbatim, e.g. <code>[doozy]</code> would show up as "<code>1 Doozy Enhancement</code>".</p>
