--- a/rdoc/README_rdoc.html
+++ b/rdoc/README_rdoc.html
@@ -46,7 +46,7 @@
       <h3 class="section-header">File Stats</h3>
       <dl>
         <dt class="modified-date">Last Modified</dt>
-        <dd class="modified-date">Mon Jun 21 20:46:16 -0400 2010</dd>
+        <dd class="modified-date">Tue Jun 22 01:23:06 -0400 2010</dd>
 
         
 
@@ -1105,7 +1105,7 @@ href="http://github.com/proutils/vclog">github.com/proutils/vclog</a>
 <h2>DESCRIPTION</h2>
 <p>
 <a href="VCLog.html">VCLog</a> is a versitle cross-VCS/SCM changelog
-generator. It currently supports Git and Subversion.
+generator. It currently supports Git, Hg and (limited) Subversion.
 </p>
 <h2>SYNOPSIS</h2>
 <p>
