--- a/rdoc/index.html
+++ b/rdoc/index.html
@@ -1481,7 +1481,7 @@ href="http://github.com/proutils/vclog">github.com/proutils/vclog</a>
 <h2>DESCRIPTION</h2>
 <p>
 <a href="VCLog.html">VCLog</a> is a versitle cross-VCS/SCM changelog
-generator. It currently supports Git and Subversion.
+generator. It currently supports Git, Hg and (limited) Subversion.
 </p>
 <h2>SYNOPSIS</h2>
 <p>
