minor: use .rss and .atom extensions

--- a/site/index.html
+++ b/site/index.html
@@ -161,12 +161,12 @@
   <ul>
     <li><a href="log/vclog/changelog.rdoc">changelog.rdoc</a></li>
     <li><a href="log/vclog/changelog.html">changelog.html</a></li>
-    <li><a href="log/vclog/changelog-atom.xml">changelog-atom.xml</a></li>
-    <li><a href="log/vclog/changelog-rss.xml">changelog-rss.xml</a></li>
+    <li><a href="log/vclog/changelog.atom">changelog.atom</a></li>
+    <li><a href="log/vclog/changelog.rss">changelog.rss</a></li>
     <li><a href="log/vclog/history.rdoc">history.rdoc</a></li>
     <li><a href="log/vclog/history.html">history.html</a></li>
-    <li><a href="log/vclog/history-atom.xml">history-atom.xml</a></li>
-    <li><a href="log/vclog/history-rss.xml">history-rss.xml</a></li>
+    <li><a href="log/vclog/history.atom">history.atom</a></li>
+    <li><a href="log/vclog/history.rss">history.rss</a></li>
   </ul>
 
   <p>Finally, VCLog recognizes commit types through a set of heuristics. You can define you own set by creating a <code>rules.rb</code> file in <code>.vclog/</code> or <code>.config/vclog/</code>. See VCLog's own file for an example.</p>
