--- a/rdoc/HISTORY_rdoc.html
+++ b/rdoc/HISTORY_rdoc.html
@@ -46,7 +46,7 @@
       <h3 class="section-header">File Stats</h3>
       <dl>
         <dt class="modified-date">Last Modified</dt>
-        <dd class="modified-date">Mon Jun 21 22:11:31 -0400 2010</dd>
+        <dd class="modified-date">Wed Jun 23 23:51:24 -0400 2010</dd>
 
         
 
@@ -1096,6 +1096,34 @@
 
   <div id="documentation">
     <h1>RELEASE HISTORY</h1>
+<h2>1.6.1 / 2010-06-23</h2>
+<p>
+This release repairs the Atom feed format and adds an RSS feed format. Both
+formats are nearly conformant with strict validations &#8212;only a couple
+minor issues remain to iron out (such as embedded feed url). Ragardless,
+they should work fine with feed readers (which are not as strict).
+</p>
+<p>
+Changes:
+</p>
+<ul>
+<li><p>
+Repair and improve Atom feed format.
+</p>
+</li>
+<li><p>
+Add RSS feed format.
+</p>
+</li>
+<li><p>
+Fix Git email address value.
+</p>
+</li>
+<li><p>
+Add title to HTML Change Log format.
+</p>
+</li>
+</ul>
 <h2>1.6.0 / 2010-06-22</h2>
 <p>
 Previous versions utilized a system of &#8220;commit tagging&#8221; to
