admin: bump version to 1.7.0 and add video to website

--- a/site/index.html
+++ b/site/index.html
@@ -60,6 +60,10 @@
   Thankfully we have version control systems to make the chore a bit easier. But review these changes and we find
   our output options limited. That's were VCLog comes in.</p>
 
+  <div style="margin: 20px 0px;">
+<object width="425" height="344"><param name="movie" value="http://www.youtube.com/v/Mya7mDjKWZQ&hl=en&fs=1"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/Mya7mDjKWZQ&hl=en&fs=1" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="425" height="344"></embed></object>
+  </div>
+
   <p>VCLog can provide a changelogs in a variety of uniform formats for different SCMs. If we ask vclog for help
   will see it's commandline interface is fairly self-explanatory.</p>
 
@@ -74,6 +78,8 @@
       list           display format options
       help           show help information
   </pre>
+
+  <p>Help for generating a Change Log looks like this:</p>
 
   <pre>
   Usage: vclog [changelog | log] [options]
